Complete final CSS styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="table-columns-solid.svg" />
     <link
@@ -17,7 +23,7 @@
       <div class="sidebar">
         <div class="logo">
           <a href="index.html"
-            ><i class="fa-solid fa-table-columns"></i> Dashboard</a
+            ><i class="fa-solid fa-table-columns"></i>Dashboard</a
           >
         </div>
         <ul class="links">
@@ -58,11 +64,22 @@
             <i class="fa-solid fa-magnifying-glass"></i> <input type="text" />
           </div>
           <div class="profile">
-            <a href="#"><i class="fa-solid fa-bell"></i> </a> Kozume Kenma
+            <a href="#"><i class="fa-solid fa-bell"></i> </a>
+            <img
+              src="cat-profile-pic.jpg"
+              alt="User Profile Pic"
+              class="profile-pic smaller"
+            />
+            <h3>Kozume Kenma</h3>
           </div>
         </div>
         <div class="menu">
           <div class="greetings">
+            <img
+              src="cat-profile-pic.jpg"
+              alt="User Profile Pic"
+              class="profile-pic"
+            />
             <h3>
               Hi there, <br />
               Kenma Kozume (@applepi)
@@ -76,53 +93,217 @@
         </div>
       </div>
       <div class="main">
-        <div class="main-left">
-          <div class="article">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, animi
-            libero saepe dolor, dolores reiciendis laudantium nostrum omnis
-            magni, nam dolorem magnam? Voluptatem sunt esse aperiam, culpa
-            ducimus enim. Ab.
-          </div>
-          <div class="article">
-            Vel nihil quod reiciendis a mollitia sequi sunt ipsum eum.
-            Temporibus illo officia libero odit! Harum maiores tenetur,
-            accusamus at id ipsam exercitationem sequi error ipsum, obcaecati
-            incidunt rerum excepturi?
-          </div>
-          <div class="article">
-            Molestias, voluptate rerum, sequi, deleniti odio culpa itaque
-            placeat sit cupiditate qui quibusdam. Excepturi placeat expedita
-            nihil eum eius quidem quod alias magni, quasi ducimus facere est
-            unde quia sit.
-          </div>
-          <div class="article">
-            Fuga eveniet accusantium possimus rem facilis reiciendis corrupti
-            itaque nostrum. Unde, iure cumque nobis modi reprehenderit, vel
-            voluptatem dolores dolorem, labore earum doloribus laboriosam
-            maiores ipsum! Error similique facilis corporis?
-          </div>
-          <div class="article">
-            Sapiente quae velit consectetur odio ullam amet ducimus, aspernatur
-            modi enim nisi illum, magni beatae quasi at sed libero nostrum
-            obcaecati molestiae ab distinctio aperiam minus assumenda voluptatem
-            necessitatibus! Accusantium.
-          </div>
-          <div class="article">
-            Animi doloribus modi voluptas cum, quia corporis dolor earum aperiam
-            quibusdam minima impedit incidunt, unde nobis vitae. Blanditiis iste
-            consectetur accusamus rerum, iusto commodi, autem facilis
-            praesentium eaque accusantium itaque!
+        <div class="wrap">
+          <h3>Your projects</h3>
+          <div class="main-left">
+            <div class="article">
+              <h3>Super Cool Project</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolore, consequatur blanditiis natus quod omnis minus eveniet
+                quo, quas ratione exercitationem quis nemo maxime reiciendis?
+              </p>
+              <div class="save-options">
+                <ul class="icons">
+                  <li>
+                    <a href="#"
+                      ><i class="fa-solid fa-heart-circle-plus"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-eye"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-code-branch"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="article">
+              <h3>Super Cool Project</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolore, consequatur blanditiis natus quod omnis minus eveniet
+                quo, quas ratione exercitationem quis nemo maxime reiciendis?
+              </p>
+              <div class="save-options">
+                <ul class="icons">
+                  <li>
+                    <a href="#"
+                      ><i class="fa-solid fa-heart-circle-plus"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-eye"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-code-branch"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="article">
+              <h3>Super Cool Project</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolore, consequatur blanditiis natus quod omnis minus eveniet
+                quo, quas ratione exercitationem quis nemo maxime reiciendis?
+              </p>
+              <div class="save-options">
+                <ul class="icons">
+                  <li>
+                    <a href="#"
+                      ><i class="fa-solid fa-heart-circle-plus"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-eye"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-code-branch"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="article">
+              <h3>Super Cool Project</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolore, consequatur blanditiis natus quod omnis minus eveniet
+                quo, quas ratione exercitationem quis nemo maxime reiciendis?
+              </p>
+              <div class="save-options">
+                <ul class="icons">
+                  <li>
+                    <a href="#"
+                      ><i class="fa-solid fa-heart-circle-plus"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-eye"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-code-branch"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="article">
+              <h3>Super Cool Project</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolore, consequatur blanditiis natus quod omnis minus eveniet
+                quo, quas ratione exercitationem quis nemo maxime reiciendis?
+              </p>
+              <div class="save-options">
+                <ul class="icons">
+                  <li>
+                    <a href="#"
+                      ><i class="fa-solid fa-heart-circle-plus"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-eye"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-code-branch"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="article">
+              <h3>Super Cool Project</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolore, consequatur blanditiis natus quod omnis minus eveniet
+                quo, quas ratione exercitationem quis nemo maxime reiciendis?
+              </p>
+              <div class="save-options">
+                <ul class="icons">
+                  <li>
+                    <a href="#"
+                      ><i class="fa-solid fa-heart-circle-plus"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-eye"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-solid fa-code-branch"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
+
         <div class="main-right">
-          <div class="article-right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit est
-            nisi omnis, expedita blanditiis beatae at dolorum ipsum magni quos.
+          <div class="wrap">
+            <h3>Announcements</h3>
+            <div class="article-right">
+              <div class="description">
+                <h3>Lorem, ipsum.</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Officia, nemo?
+                </p>
+              </div>
+              <div class="description border">
+                <h3>Lorem, ipsum.</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Officia, nemo?
+                </p>
+              </div>
+              <div class="description">
+                <h3>Lorem, ipsum.</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Officia, nemo?
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="article-right">
-            Molestiae soluta provident explicabo voluptatem hic quisquam dolorem
-            quo? Quas dolorum dicta vel explicabo voluptas ratione, culpa
-            quibusdam ea suscipit.
+          <div class="wrap">
+            <h3>Trending</h3>
+            <div class="article-right">
+              <div class="trending-profile">
+                <div class="profile-img">
+                  <img src="profile1.jpg" alt="" class="profile-pic smaller" />
+                </div>
+                <div class="text">
+                  <h4>@user1</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+              <div class="trending-profile">
+                <div class="profile-img">
+                  <img src="profile2.jpg" alt="" class="profile-pic smaller" />
+                </div>
+                <div class="text">
+                  <h4>@user2</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+              <div class="trending-profile">
+                <div class="profile-img">
+                  <img src="profile3.jpg" alt="" class="profile-pic smaller" />
+                </div>
+                <div class="text">
+                  <h4>@user3</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+              <div class="trending-profile">
+                <div class="profile-img">
+                  <img src="profile4.jpg" alt="" class="profile-pic smaller" />
+                </div>
+                <div class="text">
+                  <h4>@user4</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
